<resources>
    <string name="app_name" translatable="false">City Navigation</string>

    <!-- Shared preferences -->
    <string name="preference_file_key" translatable="false">cn-sp</string>
    <string name="logged" translatable="false">logged</string>
    <string name="userEmail" translatable="false">email</string>
    <string name="userName" translatable="false" />
    <string name="userId" translatable="false">id</string>
    <string name="geofenceRadius" translatable="false">id</string>

    <!-- Menu Items -->
    <string name="miHome">Map</string>
    <string name="miNotes">Notes</string>
    <string name="miSettings">Settings</string>
    <string name="miLogout">Logout</string>
    <string name="miSave">Save</string>
    <string name="miDelete">Delete</string>
    <string name="none" translatable="false">None</string>

    <!-- Login -->
    <string name="withoutLogin"><u>Continue without login</u></string>
    <string name="loginFailed">Login failed</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


    <!-- Main Activity -->
    <string name="welcome">Welcome</string>
    <string name="stranger">Stranger</string>

    <!-- Toasts -->
    <string name="emptyFields">Please, fill the textfields</string>
    <string name="loginNeeded">Please Login, to create Report</string>
    <string name="error">Something went wrong, try again</string>
    <string name="noteNotCreated">Note not created</string>
    <string name="noteNotUpdated">Note not updated</string>
    <string name="reportCreated">Report Created</string>
    <string name="reportUpdated">Report Updated</string>
    <string name="reportDeleted">Report Deleted</string>
    <string name="cantCamera">Cant open camera</string>

    <!-- Dialog -->
    <string name="open" translatable="false">Drawer Opened</string>
    <string name="close" translatable="false">Drawer Closed</string>

    <!-- Notes/Reports -->
    <string name="title">Title</string>
    <string name="insertText">Insert Text</string>
    <string name="addPhoto">Add Photo</string>
    <string name="cancel">Cancel</string>

    <string name="newNote">New Note</string>
    <string name="editNote">Edit Note</string>
    <string name="addNote">Add Note</string>


    <string name="category">Category</string>
    <string name="newReport">New Report</string>
    <string name="editReport">Edit Report</string>
    <string name="deleteReport">Delete Report</string>

    <!-- Placeholder -->
    <string name="lorem" translatable="false">Lorem Ipsum</string>
    <string name="loremMail" translatable="false">lorem@ipsum.com</string>

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="geofenceradius">Geofence Radius:</string>
    <string name="Done">Done</string>

    <string name="title_activity_maps">Map</string>
    <string name="distance">Distance</string>

    <!-- Notification -->
    <string name="geofence" translatable="false">Geofence</string>
    <string name="geofenceEnter">Geofence area entered</string>
    <string name="geofenceExit">Geofence area exited</string>
    <string name="geofenceDwell">Still inside geofence area</string>

    <!-- Chips -->
    <string name="road">Road</string>
    <string name="nature">Nature</string>
    <string name="construction">Construction</string>
    <string name="onekm" translatable="false">1km</string>
    <string name="twokm" translatable="false">2km</string>
    <string name="threekm" translatable="false">3km</string>
    <string name="fourkm" translatable="false">4km</string>
    <string name="fivekm" translatable="false">5km</string>
    <string name="sixkm" translatable="false">6km</string>
    <string name="sevenkm" translatable="false">7km</string>
    <string name="eightkm" translatable="false">8km</string>
    <string name="ninekm" translatable="false">9km</string>
    <string name="tenkm" translatable="false">10km</string>

</resources>