<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miPicture"
        android:icon="@drawable/ic_outline_camera_alt_24"
        android:iconTint="@color/black_ish"
        
        android:title="@string/addPhoto"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/miCancel"
        android:icon="@drawable/ic_baseline_close_24"
        android:iconTint="@color/black_ish"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/miDone"
        android:icon="@drawable/ic_baseline_done_24"
        android:iconTint="@color/black_ish"
        android:title="@string/addNote"
        app:showAsAction="ifRoom" />
</menu>