<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNote">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newNoteToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/new_note_menu"
        app:title="@string/newNote"
        app:titleTextAppearance="@style/toolbarText" />

    <EditText
        android:id="@+id/newNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/noteTitle"
        android:hint="@string/title"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNoteToolbar"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white_ish"
        app:layout_constraintBottom_toTopOf="@+id/newNoteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNoteTitle" />

    <EditText
        android:id="@+id/newNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/noteText"
        android:hint="@string/insertText"
        android:inputType="textMultiLine"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"/>
</androidx.constraintlayout.widget.ConstraintLayout>